css/style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
    line-height: 1;
}
ol, ul {
    list-style: none;
}
blockquote, q {
    quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
    content: '';
    content: none;
}
table {
    border-collapse: collapse;
    border-spacing: 0;
}




/* top page */

body {
    overflow: hidden;
    background-image: url(../img/back-top.jpg);
    background-size: 500px;
    font-family: 'YuGothic','Yu Gothic','Hiragino Kaku Gothic ProN','ヒラギノ角ゴ ProN W3','メイリオ', 'Meiryo','ＭＳ ゴシック',sans-serif;
}

h1 {
    font-family: 'YuGothic','Yu Gothic','Hiragino Kaku Gothic ProN','ヒラギノ角ゴ ProN W3','メイリオ', 'Meiryo','ＭＳ ゴシック',sans-serif;
    font-size: 3rem;
    padding: 20px;
}

.door {
    margin-top: 5%;
    text-align: center;
}

.coution {
    margin-top: 2.5%;
    text-align: center;
}

.coution h2 {
    font-size: 2.5rem;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    color: #eee;
}

.coution p {
    margin-top: 1.8%;
    font-size: 1.25rem;
}






/* action page */

#kanae {
    z-index: 1001;
    width: 1760px;
    height: 1054px;
    display: none;
}

#action {
    background-image: none;
}

#action h2 {
    font-family: 'YuGothic','Yu Gothic','Hiragino Kaku Gothic ProN','ヒラギノ角ゴ ProN W3','メイリオ', 'Meiryo','ＭＳ ゴシック',sans-serif;
    font-size: 3rem;
    padding: 20px;
}

.movie-move {
    margin-top: 13%;
}

.movie-move video {
    z-index: 1;
    text-align: center;
    position:absolute;
    top: 20%;
    left: 29%;
}

.movie-move img {
    z-index: 2;
    text-align: center;
    cursor: pointer;
    position:absolute;
    top: 27%;
    left: 36%;
    width: 405px;
    height: 360px;
}

#countDown {
    z-index: 100;
}










/* result page */

.ho a img {
    padding: 0;
    margin: 0;
}

.ho a img:hover {
    cursor: default;
}

.result-title {
    text-align: center;
    margin-top: 7%;
}

.result-title h2 {
    font-size: 3.5rem;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

.result-social {
    margin-top: 4%;
    text-align: center;
}

.result-social a {
    padding: 0 15px;
}

.result-social a i {
    color: #eee;
    font-size: 33px;
    transition: 0.4s;
}

.result-social a i:hover {
    color: rgb(96, 213, 213);
}

.top-button {
    font-size: 2rem;
    display: flex;
    justify-content: flex-end;
    padding-right: 7%;
}

.top-button a {
    color: #eee;
}


@media (max-width: 479px) {

    #kanae {
        object-fit: cover;
        z-index: 1001;
        width: 660px;
        height: 1054px;
    }

    .movie-move video {
        top: 30;
        left: 0;
    }

    .movie-move img {
        width: 202px;
        height: 180px;
    }
}

